[gd_scene load_steps=7 format=3 uid="uid://t8a24hya7sa5"]

[ext_resource type="Script" uid="uid://y66ketf8617v" path="res://ui/camp_menu/inventory/gear/gear_menu.gd" id="1_yuejw"]
[ext_resource type="Texture2D" uid="uid://4tgxvu4fo1h1" path="res://ui/common/sprite/text_box.png" id="2_qs1pr"]
[ext_resource type="Theme" uid="uid://dia0gxxbh53kd" path="res://ui/camp_menu/inventory/common/green_button_text_theme.tres" id="3_36yb6"]
[ext_resource type="PackedScene" uid="uid://73ak5i73pvg2" path="res://ui/camp_menu/inventory/gear/party_gear_display.tscn" id="3_snihe"]
[ext_resource type="AudioStream" uid="uid://botykerynf8mp" path="res://audio/soundfx/Click.wav" id="5_42in1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jugxo"]
bg_color = Color(0, 0, 0, 1)

[node name="ArmourMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yuejw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jugxo")

[node name="TitlePanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0205078
anchor_top = 0.0247396
anchor_right = 0.168945
anchor_bottom = 0.09375
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_qs1pr")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TitlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.505208
anchor_right = 1.0
anchor_bottom = 0.505208
offset_top = -14.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Armour"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="ActionsPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0273438
anchor_right = 0.621094
anchor_bottom = 0.0924479
offset_left = 316.0
offset_top = 19.0
offset_right = 356.0
offset_bottom = 59.0
theme = ExtResource("3_36yb6")
texture = ExtResource("2_qs1pr")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="EquipButton" type="Button" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509943
anchor_right = 0.509943
anchor_bottom = 1.0
offset_left = -320.0
offset_right = -234.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
toggle_mode = true
text = "EQUIP"
flat = true
metadata/_edit_use_anchors_ = true

[node name="DropButton" type="Button" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.1392
anchor_right = 1.1392
anchor_bottom = 1.0
offset_left = -320.0
offset_right = -234.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
toggle_mode = true
text = "DROP"
flat = true
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.751953
anchor_top = 0.19401
anchor_right = 0.929688
anchor_bottom = 0.196615
offset_right = 8.0
offset_bottom = 50.0
theme_type_variation = &"CharacterSelectButton"
theme_override_font_sizes/font_size = 28
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Inventories" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.283854
anchor_right = 1.0
anchor_bottom = 0.963542
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="PartyGearDisplay" parent="Inventories" instance=ExtResource("3_snihe")]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyGearDisplay2" parent="Inventories" instance=ExtResource("3_snihe")]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyGearDisplay3" parent="Inventories" instance=ExtResource("3_snihe")]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyGearDisplay4" parent="Inventories" instance=ExtResource("3_snihe")]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_42in1")

[connection signal="toggled" from="ActionsPanel/EquipButton" to="." method="_on_equip_button_toggled"]
[connection signal="toggled" from="ActionsPanel/DropButton" to="." method="_on_drop_button_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
